--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.pyc
-# */migrations/*
+*/migrations/*
 colevents/settings.py
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
