--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ django-cors-headers==2.4.0
 django-extra-fields==1.0.0
 django-filter==2.0.0
 django-filters==0.2.1
+django-smtp-ssl==1.0
 django-storages==1.7.1
 djangorestframework==3.9.0
+djangorestframework-stubs==0.1.0
 future==0.17.1
 idna==2.8
 kombu==4.2.2.post1
@@ -28,3 +30,4 @@ social-auth-app-django==3.1.0
 social-auth-core==2.0.0
 urllib3==1.24.1
 vine==1.1.4
+virtualenv==16.4.3
