--- a/django_nginx.conf
+++ b/django_nginx.conf
@@ -1,7 +1,7 @@
 # the upstream component nginx needs to connect to
 upstream firstsite {
-    # server 127.0.0.1:8001;
-    server unix:///tmp/aditya.sock; # for a file socket, more effective
+    server 127.0.0.1:8001;
+    # server unix:///tmp/aditya.sock; # for a file socket, more effective
 }
 # configuration of the server
 server {
