--- a/aditya_uwsgi.ini
+++ b/aditya_uwsgi.ini
@@ -3,7 +3,7 @@
 # the base directory (full path) where settings.py locates
 chdir           = /home/ubuntu/colfest/swapnilcolfest/Festify_BackEnd2/colevents
 # Django's wsgi file
-module          = wsgi
+module          = /home/ubuntu/colfest/swapnilcolfest/Festify_BackEnd2/colevents.wsgi
 # the virtualenv (full path)
 home            = /home/ubuntu/colfestenv
 # process-related settings
