--- a/aditya_uwsgi.ini
+++ b/aditya_uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 # Django-related settings
 # the base directory (full path) where settings.py locates
-chdir           = /home/ubuntu/colfest/swapnilcolfest/Festify_BackEnd2/colevents
+chdir           = /home/ubuntu/colfest/swapnilcolfest/Festify_BackEnd2
 # Django's wsgi file
-module          = wsgi
+module          = colevents.wsgi
 # the virtualenv (full path)
 home            = /home/ubuntu/colfestenv
 # process-related settings
