--- a/aditya_uwsgi.ini
+++ b/aditya_uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 # Django-related settings
-# the base directory (full path) where settings.py locates
+# the base directory (full path) i.e.  /path/to/your/project
 chdir           = /home/ubuntu/colfest/swapnilcolfest/Festify_BackEnd2
 # Django's wsgi file
 module          = colevents.wsgi
