uwsgi log path changed

--- a/aditya_uwsgi.ini
+++ b/aditya_uwsgi.ini
@@ -20,4 +20,4 @@ vacuum          = true
 # create a pidfile
 pidfile = /tmp/aditya.pid
 # background the process & log
-daemonize = uwsgi.log
+daemonize = /var/log/uwsgi/uwsgi.log
