--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 defusedxml==0.5.0
 Django==2.0
 django-cors-headers==2.4.0
+django-extensions==2.1.6
 django-extra-fields==1.0.0
 django-filter==2.0.0
 django-filters==0.2.1
@@ -29,5 +30,6 @@ six==1.12.0
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0
 urllib3==1.24.1
+uWSGI==2.0.18
 vine==1.1.4
 virtualenv==16.4.3
