--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.3.2
 billiard==3.5.0.5
+blinker==1.4
 celery==4.2.1
 certifi==2018.11.29
 chardet==3.0.4
@@ -14,6 +15,7 @@ django-filters==0.2.1
 django-rest-framework-mongoengine==3.3.1
 django-smtp-ssl==1.0
 django-storages==1.7.1
+django-stubs==0.12.1
 djangorestframework==3.9.0
 djangorestframework-stubs==0.1.0
 djongo==1.2.23
@@ -22,6 +24,8 @@ idna==2.8
 kombu==4.2.2.post1
 Markdown==3.0.1
 mongoengine==0.17.0
+mypy==0.701
+mypy-extensions==0.4.1
 mysqlclient==1.3.14
 oauthlib==2.1.0
 Pillow==5.3.0
@@ -35,6 +39,8 @@ six==1.12.0
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0
 sqlparse==0.2.4
+typed-ast==1.3.5
+typing-extensions==3.7.2
 urllib3==1.24.1
 uWSGI==2.0.18
 vine==1.1.4
