--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.pyc
 */migrations/*
 festify/settings.py
+festify-env
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
